mv dev instructions from BUILD.md to Development.md